--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@sentry/nuxt": "^9.18.0",
+    "dotenv": "^16.5.0",
     "nuxt": "^3.17.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
