--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/supabase": "^1.5.1",
     "@sentry/nuxt": "^9.18.0",
     "dotenv": "^16.5.0",
     "nuxt": "^3.17.3",
